[package]
name = "permissive-json-pointer"
version = "0.1.0"
edition = "2021"
description = "A permissive json pointer"
readme = "README.md"
license = "WTFPL"
repository = "https://github.com/irevoire/permissive-json-pointer"
keywords = ["json", "pointer", "path", "serde_json", "permissive", "liberal"]

[dependencies]
serde_json = "1.0"

[dev-dependencies]
big_s = "1.0"